version 1.4.8 - add endpoint get user uuid and validation permition acess for list
