# src/routers/user.router.ts
@@ -2,7 +2,7 @@ import { Router } from "express";
 import express from "express"
 import { UserController } from "../controllers/user-controller";
 import { ensureAuthenticated } from "../middlewares/ensureAuthenticated";
-import { userAuthorization } from "../middlewares/userAuthorization";
+import { userAuthorization, validateUserId } from "../middlewares/userAuthorization";
 
 import { upload } from "../config/multer"
 
@@ -13,7 +13,8 @@ userRouter.post("/customer", userController.createCustomer)
 
 userRouter.use(ensureAuthenticated)
 userRouter.post("/technical", userAuthorization(["admin"]), userController.createTechnical)
-userRouter.get("/:role", userAuthorization(["admin"]), userController.index)
+userRouter.get("/:id", validateUserId, userController.showUser)
+userRouter.get("/list/:role", userAuthorization(["admin"]), userController.index)
 userRouter.patch("/:id", upload.single('file'), userController.update)
 userRouter.delete("/:id", userAuthorization(["admin", "customer"]), userController.remove)
 
