# swagger.json
@@ -52,7 +52,7 @@
         }
       }
     },
-    "/user/{role}": {
+    "/user/list/{role}": {
       "get": {
         "description": "Lista todos os usuários de uma função específica (cliente e técnico) com paginação. Somente administradores podem listar os usuarios.",
         "summary": "Listar usuários por função",
@@ -123,12 +123,12 @@
             "description": "Acesso negado."
           },
           "404": {
-            "description": "Usuários não encontrados."
+            "description": "Perfil inválido fornecido."
           }
         }
       }
     },
-    "/user/cliente": {
+    "/user/customer": {
       "post": {
         "description": "Dados necessários para cadastro de um novo Cliente no sistema.",
         "summary": "Criar cliente",
@@ -158,7 +158,7 @@
         }
       }
     },
-    "/user/tecnico": {
+    "/user/technical": {
       "post": {
         "description": "Dados necessários para cadastro de um novo Técnico no sistema, somente admin pode realizar o cadastro.",
         "summary": "Criar técnico (admin)",
@@ -197,6 +197,81 @@
       }
     },
     "/user/{id}": {
+      "get": {
+        "description": "Retorna os dados de um usuário específico pelo ID. Protegido por autenticação JWT.",
+        "summary": "Buscar usuário por ID",
+        "tags": [
+          "Users"
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID do usuário a ser buscado.",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid",
+              "example": "ff9e1bf3-eaf7-4f71-b5a0-d0d806a553a3"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Dados do usuário retornados com sucesso.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User by Id Response"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "ID do usuário inválido. (Ex: ID não corresponde ao formato UUID)",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Id invalido."
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Não autenticado."
+          },
+          "403": {
+            "description": "Acesso negado. (Ex: Usuário não tem permissão para acessar este usuário ou não é um administrador)",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Acesso negado. Você não tem permissão para acessar este usuário."
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Usuário não encontrado."
+          }
+        }
+      },
       "patch": {
         "description": "Atualiza os dados de um usuário existente, incluindo a possibilidade de enviar um novo avatar. Protegido por autenticação JWT.",
         "summary": "Atualizar usuário",
@@ -236,13 +311,39 @@
             "description": "Dados atualizados com sucesso."
           },
           "400": {
-            "description": "Dados inválidos."
+            "description": "Dados inválidos. (Ex: ID não corresponde ao formato UUID)",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Id invalido."
+                    }
+                  }
+                }
+              }
+            }
           },
           "401": {
             "description": "Não há dados para atualizar / Não autenticado."
           },
           "403": {
-            "description": "Acesso negado."
+            "description": "Acesso negado. (Ex: Usuário não tem permissão para atualizar este usuário ou não é um administrador)",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Acesso negado. Você não tem permissão para atualizar este usuário."
+                    }
+                  }
+                }
+              }
+            }
           },
           "404": {
             "description": "Usuário não encontrado."
@@ -281,7 +382,20 @@
             "description": "Informe o ID do usuário / Não autenticado."
           },
           "403": {
-            "description": "Acesso negado."
+            "description": "Acesso negado. (Ex: Usuário não tem permissão para remover este usuário ou não é um administrador)",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Acesso negado. Você não tem permissão para remover este usuário."
+                    }
+                  }
+                }
+              }
+            }
           },
           "404": {
             "description": "Usuário não encontrado."
@@ -573,6 +687,85 @@
                 "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c"
               }
             }
+          }
+        }
+      },
+      "User by Id Response": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid",
+            "example": "ff9e1bf3-eaf7-4f71-b5a0-d0d806a553a3"
+          },
+          "name": {
+            "type": "string",
+            "example": "Mateus"
+          },
+          "email": {
+            "type": "string",
+            "example": "mateus@email.com"
+          },
+          "role": {
+            "type": "string",
+            "enum": [
+              "customer",
+              "technical",
+              "admin"
+            ],
+            "example": "technical"
+          },
+          "avatar": {
+            "type": "string",
+            "example": "default.svg"
+          },
+          "userHours": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "string",
+                  "format": "uuid",
+                  "example": "614f5594-8fa3-47f1-a354-635ba95faf08"
+                },
+                "fkUserTechnical": {
+                  "type": "string",
+                  "format": "uuid",
+                  "example": "ff9e1bf3-eaf7-4f71-b5a0-d0d806a553a3"
+                },
+                "startTime": {
+                  "type": "string",
+                  "format": "date-time",
+                  "example": "2025-06-21T17:08:00.003Z"
+                },
+                "endTime": {
+                  "type": "string",
+                  "format": "date-time",
+                  "example": "2025-06-21T17:12:00.003Z"
+                },
+                "createdAt": {
+                  "type": "string",
+                  "format": "date-time",
+                  "example": "2025-06-21T23:45:07.852Z"
+                },
+                "updatedAt": {
+                  "type": "string",
+                  "format": "date-time",
+                  "example": "2025-06-21T23:45:07.852Z"
+                }
+              }
+            }
+          },
+          "createdAt": {
+            "type": "string",
+            "format": "date-time",
+            "example": "2025-06-21T17:47:45.345Z"
+          },
+          "updatedAt": {
+            "type": "string",
+            "format": "date-time",
+            "example": "2025-06-21T22:41:05.771Z"
           }
         }
       },
